# tilegame

./: CMakeLists.txt  README.txt
res/shaders/: default_fragment.glsl  default_vertex.glsl
src/: glglfw.h  main.c  tlg_camera.c  tlg_camera.h  tlg_main.c  tlg_main_loop.c  tlg_main_loop.h  tlg_mainloop.c  tlg_shader.c  tlg_shader.h  tlg_texture.c  tlg_texture.h  tlg_user_input.c  tlg_userinput.c  tlg_userinput.h  tlg_vertex_types.c  tlg_vertex_types.h
